--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>22</java.version>
+		<guava.version>33.2.0-jre</guava.version>
+		<maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -52,11 +54,26 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>33.2.0-jre</version>
+			<version>${guava.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.c4-soft.springaddons</groupId>
+			<artifactId>spring-addons-starter-oidc</artifactId>
+			<version>7.1.9</version>
+		</dependency>
+		<dependency>
+			<groupId>com.c4-soft.springaddons</groupId>
+			<artifactId>spring-addons-starter-oidc-test</artifactId>
+			<version>7.1.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.restdocs</groupId>
+			<artifactId>spring-restdocs-mockmvc</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -66,7 +83,78 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<!-- tag::surefire[] -->
+      		<plugin>
+      		  <groupId>org.apache.maven.plugins</groupId>
+      		  <artifactId>maven-surefire-plugin</artifactId>
+      		  <version>${maven-surefire-plugin.version}</version>
+      		  <configuration>
+      		    <redirectTestOutputToFile>true</redirectTestOutputToFile>
+      		    <printSummary>false</printSummary>
+      		    <includes>
+      		      <include>**/*.java</include>
+      		    </includes>
+      		  </configuration>
+      		</plugin>
+      		<!-- end::surefire[] -->
 		</plugins>
+		<!-- tag::asciidoctor-plugin-management[] -->
+    	<pluginManagement>
+    	  <plugins>
+    	    <plugin>
+    	      <groupId>org.asciidoctor</groupId>
+    	      <artifactId>asciidoctor-maven-plugin</artifactId>
+    	      <version>2.2.1</version>
+    	      <executions>
+    	        <execution>
+    	          <id>generate-docs</id>
+    	          <phase>prepare-package</phase>
+    	          <goals>
+    	            <goal>process-asciidoc</goal>
+    	          </goals>
+    	          <configuration>
+    	            <backend>html</backend>
+    	          </configuration>
+    	        </execution>
+    	      </executions>
+    	      <dependencies>
+    	        <dependency>
+    	          <groupId>org.springframework.restdocs</groupId>
+    	          <artifactId>spring-restdocs-asciidoctor</artifactId>
+    	          <version>${spring-restdocs.version}</version>
+    	        </dependency>
+    	        <dependency>
+    	          <groupId>org.asciidoctor</groupId>
+    	          <artifactId>asciidoctorj-pdf</artifactId>
+    	          <version>2.3.9</version>
+    	        </dependency>
+    	      </dependencies>
+    	      <configuration>
+    	        <doctype>book</doctype>
+    	        <attributes>
+    	          <project-version>${project.version}</project-version>
+    	        </attributes>
+    	      </configuration>
+    	    </plugin>
+    	  </plugins>
+    	</pluginManagement>
+    	<!-- end::asciidoctor-plugin-management[] -->
 	</build>
+
+  <!--tag::ci-profile[] -->
+  <profiles>
+    <profile>
+      <id>ci</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.asciidoctor</groupId>
+            <artifactId>asciidoctor-maven-plugin</artifactId>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+  <!-- end::ci-profile[] -->
 
 </project>
